--- a/fort_end/js_jq/j08_a03_制作论坛发贴/bbsList.html
+++ b/fort_end/js_jq/j08_a03_制作论坛发贴/bbsList.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <title>课工场论坛列表</title>
     <link href="css/bbs.css" rel="stylesheet">
-    <script src="../../js/jquery-3.6.1.js"></script>
+    <script src="../js/jquery-3.6.1.js"></script>
+    <script src="../js/data-format.js"></script>
     <script>
-        Date.prototype.Format = function (format){
-
-        }
 
         $(document).ready(function (){
             $("header span").click(function (){
@@ -20,8 +18,8 @@
                 const content = $(".content").val()
                 const li = $("<li></li>")
                 li.append("<img src="+"images/tou0"+ Math.floor(Math.random() * 4 + 1) + ".jpg" +">")
-                li.append("<p> " + title + "</p>")
-                li.append("<p> 板块："+ select + "  " + "发表时间："+ new Date +"</p>")
+                li.append("<h3> " + title + "</h3>")
+                li.append("<p> 板块："+ select + "  " + "发表时间："+ dateFormat("YYYY-mm-dd HH:MM",new Date()) +"</p>")
                 $("ul").append(li)
                 $(".post").hide()
             })
@@ -35,6 +33,9 @@
         img{
             border-radius: 50%;
             float: left;
+        }
+        h3{
+
         }
     </style>
 </head>
